<resources>
    <string name="app_name">Break Meet</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="password">Password</string>
    <string name="rewrite_password">Rewrite password</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_break_meeting">Welcome To Break Meeting</string>
    <string name="haven_t_account">haven\'t Account?</string>
    <string name="log_in">Log In</string>
    <string name="add_meeting">add meeting</string>
    <string name="select_meeting">select meeting</string>
    <string name="my_meetings">My meetings</string>
    <string name="update_profile">update profile</string>
    <string name="update">Update</string>
    <string name="date_of_meeting">Date Of Meeting</string>
    <string name="time_of_meeting">Time of Meeting</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="add_place">Add Place</string>
    <string name="place_id">Place ID</string>
    <string name="place_name">Place Name</string>
    <string name="done">Done</string>
    <string name="delete_meeting">Delete Meeting</string>
    <string name="send_request">Send Request</string>
    <string name="meeting_request">Meeting Request:</string>
    <string name="someone_request_to_show_you">Someone request to show you</string>
    <string name="all_meetings">All Meetings</string>
    <string name="requests_to_me">Requests To Me</string>
    <string name="reject">Reject</string>
    <string name="approval">approval</string>
    <string name="login"> </string>
    <string name="delete_request">delete request</string>
    <string name="approval_requests">Approval requests</string>

    <array name="types">
        <item>Select Type</item>
        <item>Cafeteria</item>
        <item>Collage</item>
        <item>Street</item>
        <item>Library</item>
    </array>
</resources>