<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="38dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addPlace"
            android:onClick="addPlace"
            style="@style/myButton"
            android:text="@string/add_place"
            android:visibility="gone" />

        <Button
            android:onClick="add"
            style="@style/myButton"
            android:text="@string/add_meeting" />

        <Button
            android:onClick="select"
            style="@style/myButton"
            android:text="@string/select_meeting" />

        <Button
            android:onClick="showRequests"
            style="@style/myButton"
            android:text="@string/requests_to_me" />

        <Button
            android:id="@+id/button4"
            style="@style/myButton"
            android:onClick="approvalRequests"
            android:text="@string/approval_requests" />

        <Button
            android:onClick="myMeetings"
            style="@style/myButton"
            android:text="@string/my_meetings" />

        <Button
            android:onClick="updateProfile"
            style="@style/myButton"
            android:text="@string/update_profile" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>