<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="612dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <EditText
            android:id="@+id/editTextTextPersonName2"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/student_id"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/student_name"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <RadioGroup
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="#DC628AB5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="#AC48B3"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RadioGroup>

        <TextView
            android:id="@+id/editTextDate"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:onClick="openCal" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPassword4"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:ems="10"
            android:hint="@string/rewrite_password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/button3"
            android:layout_width="111dp"
            android:layout_height="69dp"
            android:text="@string/sign_up"
            android:textColor="#DC628AB5" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>