<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddMeetingActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:layout_marginStart="31dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="44dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextView"
            android:text="@string/add_meeting"/>

        <Spinner
            android:id="@+id/type"
            style="@style/EditText"
            android:entries="@array/types" />

        <Spinner
            android:id="@+id/place"
            style="@style/EditText"/>

        <EditText
            android:id="@+id/time"
            style="@style/EditText"
            android:hint="@string/time_of_meeting"
            android:inputType="time"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/date"
            android:onClick="openCal"
            style="@style/TextView"
            android:hint="@string/date_of_meeting" />

        <EditText
            style="@style/TextView"
            android:id="@+id/description"
            android:hint="@string/description"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:onClick="add"
            style="@style/button"
            android:text="@string/add"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>