<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="349dp"
        android:layout_height="642dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="75dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="340dp"
            android:layout_height="226dp"
            android:layout_marginBottom="19dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/break_meet" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/TextView"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.699" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            style="@style/TextView"
            android:autofillHints=""
            android:hint="@string/student_id"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.587" />

        <TextView
            android:id="@+id/textView2"
            style="@style/label"
            android:layout_width="243dp"
            android:fontFamily="@font/comic_neue_bold_italic"
            android:paddingHorizontal="10dp"
            android:text="@string/welcome_to_break_meeting"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="181dp"
            android:layout_height="35dp"
            android:text="@string/haven_t_account"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.902" />

        <Button
            android:id="@+id/button"
            android:layout_width="133dp"
            android:layout_height="44dp"
            android:background="#00000000"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#0055FF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.901" />

        <Button
            android:id="@+id/button2"
            style="@style/myButton"
            android:onClick="logIn"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.803" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>